@@ -756,9 +756,7 @@ _GLIBCXX_BEGIN_NAMESPACE_CXX11
       template<typename _FwdIter>
 	basic_regex(_FwdIter __first, _FwdIter __last, locale_type __loc,
 		    flag_type __f)
-	: _M_flags((__f & (ECMAScript | basic | extended | awk | grep | egrep))
-		   ? __f : (__f | ECMAScript)),
-	_M_loc(std::move(__loc)),
+	: _M_flags(__f), _M_loc(std::move(__loc)),
 	_M_automaton(__detail::__compile_nfa<_Rx_traits>(
 	  std::move(__first), std::move(__last), _M_loc, _M_flags))
 	{ }
@@ -773,9 +771,9 @@ _GLIBCXX_BEGIN_NAMESPACE_CXX11
       template<typename, typename, typename, bool>
 	friend class __detail::_Executor;
 
-      flag_type	      _M_flags;
-      locale_type	    _M_loc;
-      _AutomatonPtr	  _M_automaton;
+      flag_type		_M_flags;
+      locale_type	_M_loc;
+      _AutomatonPtr	_M_automaton;
     };
 
 #if __cpp_deduction_guides >= 201606
